# mrdcleaner

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
mrdcleaner/: __init__.py
mrdcleaner/ui/: FileWidget.py
ui/: FileWidget.py  MainWindow.py
